Find solution to navbar background color display, gap between navbar and dropdown, add style properties to ensure page scroll to exact position of article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,11 @@
 }
 /* Global styles */
 
+
+
 body {
     font-family: var(--primary-font);
-    padding-top: 50px;
+    padding-top: 40px;
 }
 h1,
 h2,
@@ -35,24 +37,33 @@ h5 {
     font-weight: 800;
 }
 /* navigation */
-.navbar *{
+.navbar {
     background-color: var(--primary-color);
     border: var(--primary-color);
     font-family: var(--secondary-font);
     font-style: italic;
-    font-weight: 500; 
+    font-weight: 600; 
     font-size: x-large;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.2rem;
     
+}
+.dropdown-menu {
+    background-color: var(--primary-color);
+    border: var(--primary-color);
 }
 
 .navbar-brand {
-    font-weight: 500; 
+    font-weight: 600; 
     font-size: x-large;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.2rem;
 }
-
-
+/* to make sure screen scroll exacly at the title of article linked to a specific li */
+html {
+    scroll-behavior: smooth;
+}
+:target {
+      scroll-margin-top: 80px;
+}
 
 #hero {
     width: 100%;
@@ -119,15 +130,19 @@ footer {
     max-height: 30rem;
 }
 #tips ol {
-    margin: 0.5rem;
+    margin: 1.5rem;
     line-height: 2.5rem;
+    font-weight: 700;
+    color: rgb(85, 122, 245);
     
 }
 #tips ol a {
     text-decoration: none;
+    font-weight: 700;
+    font-size: 1.1rem;
 }
 article {
-    margin-bottom: 4rem;
+    margin-bottom: 2.5rem;
 }
 
 
